syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.library";

import "stremio/core/types/meta_item.proto";

message LibraryItem {
  required string id = 1;
  required string type = 2;
  required string name = 3;
  optional string poster = 4;
  required PosterShape poster_shape = 5;
  required LibraryItemState state = 6;
  required MetaItemBehaviorHints behavior_hints = 7;
  required MetaItemDeepLinks deep_links = 8;
}

message LibraryItemState {
  required uint64 time_offset = 1;
  required uint64 duration = 2;
}
